fix spacing

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -28,6 +28,7 @@ body {
 
 .box h3 {
   font-weight: normal;
+  font-size: 30;
 }
 
 .header {
